# template-pygame-app

./: .gitlab-ci.yml  flake.nix  pyproject.toml
template/: __main__.py  app.py
